<resources>
    <string name="app_name">Ravichandra_Malapati</string>

    <string name="title_activity_button_task1">ButtonTask1</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Button1">Button1</string>
    <string name="MyName">Ravichandra Malapati</string>
    <string name="MyEmail">rmalapat@syr.edu</string>

    <string name="Course">CIS600</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="task2">Task2</string>
    <string name="task3">Task3</string>
    <string name="aboutme">About Me</string>
    <string name="nav_home">Home</string>
    <string name="nav_rotate">Rotate</string>
    <string name="nav_refresh">Refresh</string>
    <string name="nav_power">Power</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="firebase_url">https://zolhi-90cea.firebaseio.com</string>
</resources>
