<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">

        <item
            android:id="@+id/home_nav"
            android:checked="false"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"/>
        </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group2">

        <item
            android:id="@+id/aboutme_menu"
            android:checked="false"
            android:icon="@drawable/ic_perm_identity_black_24dp"
            android:title="@string/aboutme"/>

        <item
            android:id="@+id/task2_menu"
            android:checked="false"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/task2"/>

        <item
            android:id="@+id/task3_menu"
            android:checked="false"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/task3"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group3">
        <item android:title="Settings">
        <menu>
        <item
            android:id="@+id/rotate_nav"
            android:checked="false"
            android:icon="@drawable/ic_loop_black_24dp"
            android:title="@string/nav_rotate"/>

        <item
            android:id="@+id/nav_refresh"
            android:checked="false"
            android:icon="@drawable/ic_repeat_black_24dp"
            android:title="@string/nav_refresh"/>

        <item
            android:id="@+id/nav_power"
            android:checked="false"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/nav_power"/>
        </menu>
        </item>
    </group>
</menu>